改用 provide/inject, 各頁面中文化

--- a/src/i18n/zh-tw.json
+++ b/src/i18n/zh-tw.json
@@ -1,6 +1,9 @@
 {
     "common": {
-        "more": "更多"
+        "more": "更多",
+        "contact_us": "聯絡我們",
+        "learn_more": "了解更多",
+        "home": "首頁"
     },
     "intro": {
         "subheading": "開創智慧未來",
@@ -13,23 +16,100 @@
         "pageName": "智慧自動化",
         "pageLabel": "製造業",
         "pageSubLabel": "農業",
-        "pageText": "我們可以透過各種方法讓工廠更聰明，\n哪種解決方案最讓您感興趣？"
+        "pageText": "我們可以透過各種方法讓工廠更聰明，\n哪種解決方案最讓您感興趣？",
+        "points": [
+            {
+                "name": "人機介面（HMI）",
+                "text": "HMI設備在智慧工廠扮演重要角色，負責為作業員收集並提供寶貴數據，以維持高精度、高速度的生產配裝過程。\nHMI設備必須在嚴苛的製造環境中，展現高超效能及無與倫比的穩定度 – 不容犯錯空間。"
+            },
+            {
+                "name": "工業機器人",
+                "text": "工業機器人是未來智慧工廠的核心之一，更是現代生產線上不可或缺的設備。\n由於工業機器人需在惡劣的工業環境下表現出色，因此需配備最高規格的元件與最智慧的功能，以維持最佳運作能力。"
+            },
+            {
+                "name": "輸送系統",
+                "text": "廠房輸送系統不但得動作迅速，還要與所有其他快速運作的設備及作業員完美配合。只要故障，一切都將停擺。\n輸送系統必須禁得住生產線上各項挑戰，就算小問題也不容忽視。"
+            }
+        ]
     },
     "facialRecognition": {
         "pageName": "智慧安全",
         "pageLabel": "監視系統",
-        "pageText": "我們可以透過各種方法讓人臉辨識更聰明，\n哪種解決方案最讓您感興趣？"
+        "pageText": "我們可以透過各種方法讓人臉辨識更聰明，\n哪種解決方案最讓您感興趣？",
+        "points": [
+            {
+                "name": "智慧相機",
+                "text": "智慧相機辨識系統必須在毫不拖泥帶水的情況下，正確處理生物辨識資料，為用戶提供方便安全的體驗。\n快速處理多組複雜數據時，智慧相機的元件得具備優越效能及穩定度。此外，它們也必須在多種應用及環境中，維持長時間開機與不間斷錄影。"
+            },
+            {
+                "name": "平板電腦",
+                "text": "監視用平板電腦在連接大批裝置後，必須能讓保全人員和其他相關人士迅速取得回傳的影像。\n著重安全考量的平板電腦不但得展現效能及靈活度，還要協助系統操作人員管理及維護連接中的裝置。"
+            },
+            {
+                "name": "網路攝影機（NVR）",
+                "text": "監視應用每秒會產生龐大數據，因此需配備性能出眾的錄影與數據處理功能，以提供具使用價值的監視數據。\n網路攝影機（NVR）用於監視應用時，必須發揮超越其他類似產品的效能與可靠度，任何一個硬體或元件都馬虎不得。"
+            },
+            {
+                "name": "門禁系統",
+                "text": "門禁系統堪稱管制區的最後一道防線，負責審核人員的進出權限。其設計看似簡單，實則需要確保與安全系統相關之其他配件完美整合運作，並在人員證明身分後立刻放行。\n理想中的門禁系統除了表現萬無一失、具備即時資料處理能力與高資訊吞吐量外，還需擁有出色的通訊能力、絕佳性能和最小化的停機時間。"
+            }
+        ]
     },
     "roadInfrastructure": {
         "pageName": "智慧基礎建設",
-        "pageLabel": "道路基礎建設"
+        "pageLabel": "道路基礎建設",
+        "pageSubLabel": "大眾運輸系統",
+        "pageText": "我們可以透過各種方法讓道路基礎建設更聰明，\n哪種解決方案最讓您感興趣？",
+        "points": [
+            {
+                "name": "電子收費系統",
+                "text": "電子收費系統（ETC）需快速掃描並辨識車輛，並即時傳輸交通數據至操作員或AI系統，供進一步處理。\nETC系統是道路基礎建設中極為重要的環節，在最嚴苛的戶外氣候條件下，不論熱浪或寒流，ETC系統都必須保持最佳狀態。"
+            },
+            {
+                "name": "路邊監測站",
+                "text": "路邊監測站可同時收集並處理交通數據、天氣資訊或周邊基礎設施現況。\n由於全年暴露在戶外氣候及污染環境下，再加上車輛撞擊或路面震動等挑戰，路邊監測站必須堅若磐石。此外，為有效執行維修與管理，還需配備完善的遠端管理功能。"
+            }
+        ]
     },
     "healthcare": {
         "pageName": "智慧服務",
-        "pageLabel": "醫療保健"
+        "pageLabel": "醫療保健",
+        "pageText": "我們可以透過各種方法讓醫療保健更聰明，\n哪種解決方案最讓您感興趣？",
+        "points": [
+            {
+                "name": "核磁共振儀",
+                "text": "核磁共振儀會產生大量高度敏感數據，務必處置得宜，立即可供醫師及醫護人員運用。\n在高度的電磁干擾情況下，核磁共振儀必須不間斷地傳輸及保存數據，避免數據完整性遭破壞，並展現絕佳的快速運算效能。"
+            },
+            {
+                "name": "智慧醫療推車",
+                "text": "哪裡需要重要的病歷紀錄及數據處理能力，智慧醫療推車就在哪。\n智慧化處理敏感資訊，效能不打折，數據安全有保障。"
+            },
+            {
+                "name": "醫用級多合一電腦",
+                "text": "醫用級多合一電腦向醫療專業人士提供來自感測器及設備的可用資訊，確保他們即時做出正確決定。\n醫用級多合一電腦不容一絲差錯，不但要維持系統穩定度，還要成為醫護人員最可靠的幫手，以最快速度提供重要資訊。"
+            }
+        ]
     },
     "others": {
         "pageName": "其他應用市場",
-        "pageLabel": null
+        "pageLabel": null,
+        "pageText": "下列哪些應用讓您最感興趣呢？",
+        "apps": {
+            "agriculture": "農業",
+            "construction": "建造",
+            "delivery_services": "配送服務",
+            "public_transportation": "大眾運輸系統",
+            "logistics": "物流",
+            "public_services": "公共服務",
+            "surveillance": "監視系統",
+            "security_checkpoints": "安全檢查哨",
+            "mining_and_drilling": "採礦與鑽探",
+            "oil_and_gas": "石油與天然氣",
+            "retail": "零售業",
+            "automated_machines": "自動化機器",
+            "aviation": "航空",
+            "power": "電力",
+            "border_security": "邊境安全"
+        }
     }
 }
