--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,9 @@
 {
     "common": {
-        "more": "more"
+        "more": "more",
+        "contact_us": "contact us",
+        "learn_more": "learn more",
+        "home": "home"
     },
     "intro": {
         "subheading": "Building an Intelligent World",
@@ -13,23 +16,100 @@
         "pageName": "Smart Automation",
         "pageLabel": "Manufacturing",
         "pageSubLabel": "Agriculture",
-        "pageText": "Factories can be made smarter in countless ways.\nWhich solution interests you the most?"
+        "pageText": "Factories can be made smarter in countless ways.\nWhich solution interests you the most?",
+        "points": [
+            {
+                "name": "Human Machine Interface (HMI)",
+                "text": "HMI devices provide invaluable data and features to workers in smart factories and are critical to maintain speed and precision along assembly lines.\nHMI devices must deliver high performance and unparalleled stability in challenging manufacturing settings—leaving little room for error."
+            },
+            {
+                "name": "Industrial Robot",
+                "text": "Industrial robots are one of the core parts of the smart factories of tomorrow and already constitute key equipment along modern assembly lines.\nExpected to provide uninterrupted exceptional performance in harsh industrial conditions, industrial robots demand the best components and smartest features to operate at an optimal level."
+            },
+            {
+                "name": "Conveyor System",
+                "text": "Conveyor systems need to keep a rapid pace and maintain perfect coordination with all the other fast-moving equipment and workers on the factory floor. If it stops, everything stops.\nConveyor systems need to withstand the tough and challenging conditions present everywhere along an assembly line without even the slightest hiccup in performance."
+            }
+        ]
     },
     "facialRecognition": {
         "pageName": "Smart Security",
         "pageLabel": "Security systems",
-        "pageText": "Facial recognition can be made smarter in countless ways.\nWhich solution interests you the most?"
+        "pageText": "Facial recognition can be made smarter in countless ways.\nWhich solution interests you the most?",
+        "points": [
+            {
+                "name": "Smart Camera",
+                "text": "Smart camera identification systems need to be able to process biometric information without delay and without error to provide users with the convenience and security they require.\nProcessing complex data sets at a rapid pace puts extreme performance and stability requirements on components used in smart cameras. Further, they are required to maintain perfect uptime and record video without any interruption in diverse applications and environments."
+            },
+            {
+                "name": "Panel PC",
+                "text": "Panel PCs used in surveillance applications need to provide security guards and other stakeholders instant access to video feeds from vast numbers of connected devices.\nSecurity-focused panel PCs need to provide performance and flexibility while also allowing system operators to manage and maintain connected devices."
+            },
+            {
+                "name": "Network Video Recorder (NVR)",
+                "text": "Surveillance applications generate enormous amounts of data every second, thereby requiring high-performance video recording and data processing capabilities that make surveillance data actionable.\nNetwork video recorders (NVRs) used in surveillance applications have some of the highest requirements for performance and reliability in the industry, meaning that all hardware and components need to be up for the task."
+            },
+            {
+                "name": "Entrance Gate",
+                "text": "Entrance gates serve as the last barrier before granting users access to protected areas. While seemingly simple, entrance gates need to work in perfect tandem with other parts of the security system, providing instant access as soon users have proven their identity.\nExpected to make no mistakes while also providing instant processing and high throughput, entrance gates require excellent communications, high performance, and minimum downtime."
+            }
+        ]
     },
     "roadInfrastructure": {
         "pageName": "Smart Infrastructure",
-        "pageLabel": "Road infrastructure"
+        "pageLabel": "Road infrastructure",
+        "pageSubLabel": "Public transportation",
+        "pageText": "Road infrastructure can be made smarter in countless ways.\nWhich solution interests you the most?",
+        "points": [
+            {
+                "name": "Electronic Toll Collection System",
+                "text": "Electronic toll collection (ETC) systems need to process vehicles at a rapid pace while also providing critical traffic data to operators or AI systems for further processing.<br>ETC systems serve vital parts of road infrastructure and must remain operational at an optimal level even in the toughest outdoor climate and weather conditions, e.g., during heatwaves and cold snaps."
+            },
+            {
+                "name": "Roadside Monitoring Station",
+                "text": "Roadside monitoring stations provide and process critical data such as traffic data, weather information, and information from nearby infrastructure.<br>Exposed to year-round outside climates, pollution, and other roadside challenges such as shocks and vibrations, roadside monitoring stations require extreme ruggedness. To allow efficient maintenance and management, they also need to provide sophisticated remote management functionality."
+            }
+        ]
     },
     "healthcare": {
         "pageName": "Smart Service",
-        "pageLabel": "Healthcare"
+        "pageLabel": "Healthcare",
+        "pageText": "Healthcare can be made smarter in countless ways.\nWhich solution interests you the most?",
+        "points": [
+            {
+                "name": "MRI Machine",
+                "text": "MRI machines generate an extraordinary amount of highly sensitive data that must be processed expediently and securely in a way that makes information quickly actionable by physicians and medical experts.<br>MRI machines need to transmit and store data without any interruption or threats to data integrity despite high levels of electromagnetic interference, all while providing excellent performance for rapid processing."
+            },
+            {
+                "name": "Smart Medical Cart",
+                "text": "Medical carts provide medical professionals with important patient information and data processing abilities where they are needed the most.<br>Processing sensitive information in sensitive settings leaves little room for performance lapses or data security issues."
+            },
+            {
+                "name": "Medical All-in-one PC",
+                "text": "Medical all-in-one PCs provide healthcare professionals with actionable real-time information from sensors and equipment, ensuring that they make the right decisions at the ideal time.<br>Medical all-in-one PCs have no margin for error, require the highest possible reliability and system stability—all while providing critical information to professionals at a rapid pace."
+            }
+        ]
     },
     "others": {
         "pageName": "Others",
-        "pageLabel": null
+        "pageLabel": null,
+        "pageText": "Which of the applications\ninterest you the most?",
+        "apps": {
+            "agriculture": "Agriculture",
+            "construction": "Construction",
+            "delivery_services": "Delivery Services",
+            "public_transportation": "Public Transportation",
+            "logistics": "Logistics",
+            "public_services": "Public Services",
+            "surveillance": "Surveillance",
+            "security_checkpoints": "Security Checkpoints",
+            "mining_and_drilling": "Mining and Drilling",
+            "oil_and_gas": "Oil and Gas",
+            "retail": "Retail",
+            "automated_machines": "Automated Machines",
+            "aviation": "Aviation",
+            "power": "Power",
+            "border_security": "Border Security"
+        }
     }
 }
