連結新增中文對應參數

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,7 +3,8 @@
         "more": "more",
         "contact_us": "contact us",
         "learn_more": "learn more",
-        "home": "home"
+        "home": "home",
+        "param": ""
     },
     "intro": {
         "subheading": "Building an Intelligent World",
