--- a/src/i18n/zh-hant.json
+++ b/src/i18n/zh-hant.json
@@ -3,7 +3,8 @@
         "more": "更多",
         "contact_us": "聯絡我們",
         "learn_more": "了解更多",
-        "home": "首頁"
+        "home": "首頁",
+        "param": "?lang=zh-hant"
     },
     "intro": {
         "subheading": "開創智慧未來",
